@@ -63,17 +63,7 @@
     (define-key map [global-semantic-idle-summary-mode]     'undefined)
     (define-key map [global-semanticdb-minor-mode]          'undefined)
     (define-key map [global-semantic-idle-scheduler-mode]   'undefined)
-    (define-key map [semantic-menu-separator] '("--"))
-    (define-key map [semantic-mode]
-      '(menu-item "Enable Parsers (Semantic)" semantic-mode
-		  :help "Enable language parsers (Semantic)"
-		  :visible (not (bound-and-true-p semantic-mode))))
     (define-key map [cedet-menu-separator] 'undefined)
-    (define-key map [ede-mode]
-      '(menu-item "Enable Project Support (EDE)" global-ede-mode
-		  :help "Enable the Emacs Development Environment (EDE)"
-		  :visible (not (bound-and-true-p global-ede-mode))))
-    (define-key map [ede-menu-separator] '("--"))
     (define-key map [ede-find-file]        'undefined)
     (define-key map [ede-speedbar]         'undefined)
     (define-key map [ede] 'undefined)
